<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="#205D67"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@drawable/toolbar_state"
        android:minHeight="?attr/actionBarSize">


        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="#205D67"
            android:textSize="30sp"
            android:textStyle="bold" />


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/zekr_counter"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/card_state"
            android:drawableTop="@drawable/counter"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/counter"
            android:textColor="#205D67"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sebha"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/card_state"
            android:drawableTop="@drawable/numeric"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sebha_name"
            android:textColor="#205D67"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/setting"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/card_state"
            android:drawableTop="@drawable/settings"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/setting"
            android:textColor="#205D67"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/card_state"
            android:drawableTop="@drawable/share"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/share"
            android:textColor="#205D67"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>

